update whiteboard demo

--- a/Web/Whiteboard/static/index.html
+++ b/Web/Whiteboard/static/index.html
@@ -104,7 +104,7 @@
       <h2>Pano Whiteboard</h2>
       <label>
         <span>App ID: </span>
-        <input name="appId" type="text" value="" />
+        <input id="appId" name="appId" type="text" value="" />
       </label>
 
       <label>
