update video quality opt

--- a/Web/BasicVideoCall/static/index.html
+++ b/Web/BasicVideoCall/static/index.html
@@ -71,10 +71,11 @@
         <td><button id="subscribeVideo" style="height:30px;width:150px;color: green;font-size:13px;">Subscribe Video</button></td>
         <td><select id="videoUsers" style="height:30px;width:150px;"></select></td>
         <td><select id="subQuality" style="height:30px;width:80px;">
-          <option value="2">180P</option>
-          <option value="4">360P</option>
-          <option value="8" selected>720P</option>
-          <option value="16">1080P</option>
+          <option value="Lowest">90P</option>
+          <option value="Low">180P</option>
+          <option value="Standard">360P</option>
+          <option value="HD720P" selected>720P</option>
+          <option value="HD1080P">1080P</option>
         </select></td>
         <td><button id="unSubscribeVideo" style="height:30px;width:150px;color: green;font-size:13px;">Unsubscribe Video</button></td>
       </tr>
