Unified comments on AppID and Token

--- a/Web/Whiteboard/static/index.html
+++ b/Web/Whiteboard/static/index.html
@@ -115,12 +115,12 @@
       </label>
 
       <label>
-        <span> Channel ID: </span>
+        <span>Channel ID: </span>
         <input name="channelId" type="text" value=""
       /></label>
 
       <label>
-        <span> pano Token: </span>
+        <span>Pano Token: </span>
         <input name="panoToken" type="text" value=""
       /></label>
 
