--- a/Web/BasicVideoCall/static/index.html
+++ b/Web/BasicVideoCall/static/index.html
@@ -26,37 +26,40 @@
         <td colspan="2">Channel Parameters</td>
     </tr>
     <tr align="center" height="40"> 
-      <td width="20%">说明</td>
-      <td style="text-align:left;padding-left:10px;font-size:13px;">请参考 <a href="https://developer.pano.video/getting-started/terms/" target="developer">名词解释</a> 了解App ID、Token、Channel ID、User ID、User Name的含义。
-      <br>可以使用 <a href="https://developer.pano.video/getting-started/firstapp/#14-%E7%94%9F%E6%88%90%E4%B8%B4%E6%97%B6token" target="developer">临时token </a>来进行临时测试。</td>
+      <td>Note</td>
+      <td style="text-align: left;padding-left: 10px;font-size: 13px;">
+        Please refer to <a href="https://developer.pano.video/getting-started/terms/" target="developer">Glossary</a> to understand the meaning of App ID, Channel ID, Token, User ID, and User Name.
+        <br>请参考 <a href="https://developer.pano.video/getting-started/terms/" target="developer">名词解释</a> 了解App ID、Token、Channel ID、User ID、User Name的含义。
+        <br><br>You can use <a href="https://developer.pano.video/getting-started/firstapp/#14-%E7%94%9F%E6%88%90%E4%B8%B4%E6%97%B6token" target="developer">temporary token</a> for temporary testing.
+        <br>可以使用 <a href="https://developer.pano.video/getting-started/firstapp/#14-%E7%94%9F%E6%88%90%E4%B8%B4%E6%97%B6token" target="developer">临时token </a>来进行临时测试。</td>
     </tr>
     <tr align="center" height="40"> 
-      <td width="20%">App ID</td>
-      <td><input id="appID" style="width: 500px;height: 38px;font-size:14px;" type="text" placeholder="[通过Pano控制台创建App获取AppID]"/></td>
+      <td>App ID</td>
+      <td align="left"><input id="appID" style="width: 100%;height: 38px;font-size:14px;" type="text" placeholder="[通过Pano控制台创建App获取AppID]"/></td>
     </tr>
     <tr align="center" height="40"> 
-      <td width="20%">Token</td>
-      <td><input id="token" style="width: 500px;height: 38px;font-size:14px;" type="text" placeholder="[使用正式Token，或者在Pano控制台对应App下生成临时Token]"/>
+      <td>Token</td>
+      <td align="left"><input id="token" style="width: 100%;height: 38px;font-size:14px;" type="text" placeholder="[使用正式Token，或者在Pano控制台对应App下生成临时Token]"/>
       </td>
     </tr>
     <tr align="center" height="40"> 
-      <td width="20%">Channel ID</td>
-      <td><input id="channelID" style="width: 500px;height: 38px;font-size:14px;" type="text" placeholder="[生成token时指定的channelID]"></td>
+      <td>Channel ID</td>
+      <td align="left"><input id="channelID" style="width: 100%;height: 38px;font-size:14px;" type="text" placeholder="[生成token时指定的channelID]"></td>
     </tr>
     <tr align="center" height="40"> 
-      <td width="20%">ChannelMode</td>
+      <td>Channel Mode</td>
       <td style="text-align: left;padding-left:10px;">
         meeting <input type="radio" value="meeting" name="channelMode" checked>
         <!-- 1_on_1 <input type="radio" value="1v1" name="channelMode"> -->
       </td>
     </tr>
     <tr align="center" height="40"> 
-      <td width="20%">User ID</td>
-      <td><input id="userID" style="width: 500px;height: 38px;font-size:14px;" type="text"></td>
+      <td>User ID</td>
+      <td align="left"><input id="userID" style="width: 100%;height: 38px;font-size:14px;" type="text"></td>
     </tr>
     <tr align="center" height="40"> 
-      <td width="20%">User Name</td>
-      <td><input id="userName" style="width: 500px;height: 38px;font-size:14px;" type="text"></td>
+      <td>User Name</td>
+      <td align="left"><input id="userName" style="width: 100%;height: 38px;font-size:14px;" type="text"></td>
     </tr>
     </table>
   </div>
