--- a/Web/BasicVideoCall/static/index.html
+++ b/Web/BasicVideoCall/static/index.html
@@ -36,7 +36,7 @@
     <tr align="center" height="40"> 
       <td>RTCServer</td>
       <td align="left"><input id="rtcServer" style="width: 100%;height: 38px;font-size:14px;" type="text"
-         placeholder="[私有化部署Pano系统时需要修改rtcServer]" value=""/></td>
+         placeholder="[私有化部署Pano系统时需要修改rtcServer，公有云请留空]" value=""/></td>
     </tr>
     <tr align="center" height="40"> 
       <td>App ID</td>
