Minor update for Web BasicVideoCall Demo

--- a/Web/BasicVideoCall/static/index.html
+++ b/Web/BasicVideoCall/static/index.html
@@ -142,8 +142,7 @@
     </div>
     <div style="width:300px; float: right; margin-left: 10px; height: 500px;">
       <label>Events</label>
-      <textarea id="events" style="width:100%; height: 500px;">
-      </textarea>
+      <textarea id="events" style="width:100%; height: 500px;"></textarea>
     </div>
     <div id="roster" align="center" style="width:300px; float: right; height: 500px;">
       <label>Roster List</label>
