Save some params into local storage for Web Whiteboard Demo

--- a/Web/Whiteboard/static/index.html
+++ b/Web/Whiteboard/static/index.html
@@ -105,12 +105,12 @@
 
       <label>
         <span>Channel ID: </span>
-        <input name="channelId" type="text" value=""
+        <input id="channelId" name="channelId" type="text" value=""
       /></label>
 
       <label>
         <span>Pano Token: </span>
-        <input name="panoToken" type="text" value=""
+        <input id="panoToken" name="panoToken" type="text" value=""
       /></label>
 
       <label>
