--- a/Web/BasicVideoCall/static/index.html
+++ b/Web/BasicVideoCall/static/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Pano SDK Demo&Debug page</title>
+    <title>Basic Video Call</title>
     <style>
       * {
         box-sizing: border-box;
@@ -36,7 +36,7 @@
     <tr align="center" height="40"> 
       <td>RTCServer</td>
       <td align="left"><input id="rtcServer" style="width: 100%;height: 38px;font-size:14px;" type="text"
-         placeholder="[私有化部署Pano系统时需要修改rtcServer，公有云请留空]" value=""/></td>
+         placeholder="[私有化部署Pano系统时需要修改rtcServer(http或https开头)，公有云请留空]" value=""/></td>
     </tr>
     <tr align="center" height="40"> 
       <td>App ID</td>
@@ -111,13 +111,13 @@
   <div id="countdown" align="center" style="background-color: lightgrey; width:100%; margin: 10px auto; padding: 5px; display: none;"></div>
 
   <div id="deviceArea" align="left" style="background-color: lightgrey; width: 100%; margin: 10px auto; padding: 5px; display: flex; flex-direction: column; align-items: center;">
-    <div >
+    <div>
       <button id="getMics" style="height:30px; width:100px;color: green;font-size:13px; display: inline;">Get Mics</button>
       <select style="width: 300px; display: inline;" id="mic_sel"></select>
       <button id="setMic" style="height:30px;width:100px;color: green;font-size:13px; display: inline;">Set Mic</button>
     </div>
 
-    <div>      
+    <div>
       <button id="getSpeakers" style="height:30px;width:100px;color: green;font-size:13px;">Get Speakers</button>
       <select style="width: 300px" id="speaker_sel"></select></button>
       <button id="setSpeaker" style="height:30px;width:100px;color: green;font-size:13px;">Set Speaker</button>
@@ -127,9 +127,6 @@
       <select style="width: 300px" id="cam_sel"></select></button>
       <button id="getPreview" style="height:30px;width:150px;color: green;font-size:13px;">Get Preview</button>
       <button id="setCam" style="height:30px;width:100px;color: green;font-size:13px;">Set Camera</button>
-
-    </div>
-    <div>
     </div>
 
   </div>
