Update for Electron Demo

--- a/Electron/BasicVideoCall/src/ui/index.html
+++ b/Electron/BasicVideoCall/src/ui/index.html
@@ -27,9 +27,9 @@
           <br>
           <fieldset>
             <legend>Channel Settings</legend>
-            Channel ID: <input type="text" id="text_channel_id" value="rntest-hzdaily" />
-            User ID: <input type="text" id="text_user_id" />
-            User Name: <input type="text" id="text_user_name" value="electron-user" />
+            Channel ID: <input type="text" id="text_channel_id"/>
+            User ID: <input type="text" id="text_user_id"/>
+            User Name: <input type="text" id="text_user_name" value="Electron_User" />
           </fieldset>
           <br>
           <fieldset>
