Update for Electron Demo 20220223

--- a/Electron/BasicVideoCall/src/ui/index.html
+++ b/Electron/BasicVideoCall/src/ui/index.html
@@ -30,6 +30,7 @@
             Channel ID: <input type="text" id="text_channel_id"/>
             User ID: <input type="text" id="text_user_id"/>
             User Name: <input type="text" id="text_user_name" value="Electron_User" />
+            Token: <input type="text" id="text_token"/>
           </fieldset>
           <br>
           <fieldset>
