Add AppID input in Electron Demo

--- a/Electron/BasicVideoCall/src/ui/index.html
+++ b/Electron/BasicVideoCall/src/ui/index.html
@@ -21,6 +21,7 @@
         <form>
           <fieldset>
             <legend>APP Settings</legend>
+            App ID: <input type="text" id="text_appid"/>
             Open DevTools:
             <input type="checkbox" class="switch" id="cb-dev-tools">
           </fieldset>
